@@ -2,6 +2,7 @@ package Backend.teampple.global.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
@@ -28,14 +29,15 @@ public class SwaggerConfig {
     @Bean
     public Docket swaggerApi() {
         return new Docket(DocumentationType.SWAGGER_2)
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(apiKey()))
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(apiKey()))
+                .ignoredParameterTypes(AuthenticationPrincipal.class)
                 .consumes(getConsumeContentTypes())
                 .produces(getProduceContentTypes())
-                .apiInfo(swaggerInfo())
-                .select()
+                .apiInfo(swaggerInfo()).select()
                 .apis(RequestHandlerSelectors.basePackage("Backend.teampple")) /**하위 패키지 -> API*/
-//                .paths(PathSelectors.any()) /** "/api/**"인 url 들만 필터링*/
+                .paths(PathSelectors.any()) /** "/api/**"인 url 들만 필터링*/
+
                 .build();
     }
 
@@ -51,10 +53,10 @@ public class SwaggerConfig {
         );
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("Authorization", authorizationScopes));
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
     private ApiKey apiKey() {
-        return new ApiKey("Authorization", "X-AUTH-TOKEN", "header");
+        return new ApiKey("JWT", "Authorization", "header");
     }
     private Set<String> getConsumeContentTypes() {
         Set<String> consumes = new HashSet<>();
